--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,4 @@
 
 @import "../node_modules/flexboxgrid/css/flexboxgrid.css";
 @import "../node_modules/muse-ui/dist/muse-ui.css";
+@import "../node_modules/muse-ui/dist/theme-dark.css";
