--- a/assets/material-design-icons.css
+++ b/assets/material-design-icons.css
@@ -5,6 +5,7 @@
   src: url("./fonts/MaterialIcons-Regular.eot");
   /* For IE6-8 */
   src: local("Material Icons"), local("MaterialIcons-Regular"), url("./fonts/MaterialIcons-Regular.woff2") format("woff2"), url("./fonts/MaterialIcons-Regular.woff") format("woff"), url("./fonts/MaterialIcons-Regular.ttf") format("truetype"); }
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
@@ -25,6 +26,5 @@
   /* Support for Firefox. */
   -moz-osx-font-smoothing: grayscale;
   /* Support for IE. */
-  font-feature-settings: 'liga'; }
-
-/*# sourceMappingURL=material-design-icons.css.map */
+  font-feature-settings: 'liga';
+  font-display: block; }
