--- a/assets/material-design-icons.scss
+++ b/assets/material-design-icons.scss
@@ -1,16 +1,23 @@
+$material-design-icons-font-path: './fonts/' !default;
+$MD-icon-path-name: $material-design-icons-font-path + 'MaterialIcons-Regular' !default;
+
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url("./fonts/MaterialIcons-Regular.eot");
-  /* For IE6-8 */
-  src: local("Material Icons"), local("MaterialIcons-Regular"), url("./fonts/MaterialIcons-Regular.woff2") format("woff2"), url("./fonts/MaterialIcons-Regular.woff") format("woff"), url("./fonts/MaterialIcons-Regular.ttf") format("truetype"); }
+  src: url("#{$MD-icon-path-name}.eot"); /* For IE6-8 */
+  src: local("Material Icons"),
+       local("MaterialIcons-Regular"),
+       url("#{$MD-icon-path-name}.woff2") format('woff2'),
+       url("#{$MD-icon-path-name}.woff") format('woff'),
+       url("#{$MD-icon-path-name}.ttf") format('truetype');
+}
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;
-  /* Preferred icon size */
+  font-size: 24px;  /* Preferred icon size */
   display: inline-block;
   line-height: 1;
   text-transform: none;
@@ -25,6 +32,5 @@
   /* Support for Firefox. */
   -moz-osx-font-smoothing: grayscale;
   /* Support for IE. */
-  font-feature-settings: 'liga'; }
-
-/*# sourceMappingURL=material-design-icons.css.map */
+  font-feature-settings: 'liga';
+}
